# YTStreamer

./: .gitignore  pyproject.toml
src/ytstreamer/: main.py
src/ytstreamer/core/: app.py
src/ytstreamer/ui/: layout.py  sidebar.py  titlebar.py
src/ytstreamer/ui/pages/: landing.py
