[project]
name = "ytstreamer"
version = "0.1.0"
description = ""
authors = [
    {name = "Atrayan",email = "atrayan33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "platformdirs (>=4.5.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "ytstreamer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "pyinstaller (>=6.17.0,<7.0.0)"
]

[tool.poetry.scripts]
ytstreamer = "ytstreamer.main:main"